# rust_bank

./: Cargo.toml
bank_actions/: Cargo.toml
bank_actions/src/: bank.rs
bank_actions/src/bank/base/: account.rs  storage.rs
bank_actions/src/bank/implements/memory/: storage.rs
bank_client/: Cargo.toml
bank_client/src/: client.rs  main.rs
bank_core/: Cargo.toml  bank.rs
bank_core/bank/: account.rs  storage.rs  transactions.rs
bank_core/src/: bank.rs  main.rs
bank_core/src/bank/: storage.rs  transactions.rs
bank_core/src/bank/implements/memory/: storage.rs
bank_protocol/: Cargo.toml
bank_protocol/src/: types.rs
bank_server/: Cargo.toml
bank_server/src/: handler.rs  lib.rs  main.rs  server.rs
client/src/: main.rs
server/src/: main.rs
src/: bank.rs  lib.rs  main.rs
src/bank/: account.rs  storage.rs  traits.rs  transactions.rs
src/bank/base/: account.rs  storage.rs
src/bank/implements/memory/: storage.rs
src/bank/traits/: account.rs  storage.rs
